# cyrus

./: .gitignore  Cargo.toml  LICENSE  README.md  grade.ps1  run-e2e.ps1
.github/workflows/: release.yml
cyrus-chimera/: Cargo.toml
cyrus-chimera/src/: cli.rs  config.rs  http.rs  lib.rs  main.rs  mcp.rs  oauth.rs  register.rs  state.rs  subagent.rs  tools.rs  wire.rs
cyrus-chimera/tests/: boot.rs
cyrus-lipsync/: Cargo.toml
cyrus-lipsync/src/: cdp.rs  cli.rs  conductor.rs  config.rs  lib.rs  main.rs  provider.rs  responses.rs  runtime.rs  subagent_mux.rs  tab_factory.rs  v1delta.rs  wstap.rs
cyrus-lipsync/tests/: boot.rs
cyrus-setup/: Cargo.toml  build.rs
cyrus-setup/assets/: cyrus_connect.js
cyrus-setup/src/: chrome.rs  codex_config.rs  connector.rs  embedded.rs  lib.rs  main.rs  secrets.rs  stack.rs  state.rs  tunnel.rs
docs/: PORT_STATUS.md  TUNNELING.md
npm/: README.md  package.json
scripts/: install.ps1  install.sh  release.ps1
tests/differential/: Cargo.toml  README.md  run_differential.ps1  run_differential.sh
tests/differential/drivers/: emit_node.mjs  emit_python.py
tests/differential/src/: emit.rs
tests/differential/tests/: differential.rs
tests/fixtures/: README.md  adversarial_tokens.json  oauth_jwt.json  parse_tool_call.json  relay_items.json  sse_sequences.json  v1delta_frames.jsonl
